manifests/prod/jdownloader-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jdownloader-2-deployment
  namespace: app-jdownloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jdownloader-2
  template:
    metadata:
      labels:
        app: jdownloader-2
    spec:
      # securityContext:
      #   runAsUser: 2000
      #   runAsGroup: 2000
      #   fsGroup: 2000
      containers:
      - name: jdownloader-2
        image: jlesage/jdownloader-2:latest
        ports:
          - containerPort: 5800
            protocol: TCP
        # resources:
        #   limits:
        #     cpu: 600m
        #     memory: 1024Mi
        # env:
        # - name: KEEP_APP_RUNNING
        #   value: "1"
        # - name: DARK_MODE
        #   value: "1"
        # - name: USER_ID
        #   value: "2000"
        # - name: GROUP_ID
        #   value: "2000"
        volumeMounts:
        # Host timezone + localtime
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        - name: timezone
          mountPath: /etc/timezone
          readOnly: true
        # App specific mounts
        - name: jdownloader-output
          mountPath: /output
        - name: jdownloader-config
          mountPath: /config
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
        - name: timezone
          hostPath:
            path: /etc/timezone
            type: File
        - name: jdownloader-output
          hostPath:
            path: /opt/configs/jdownloader-output
            type: DirectoryOrCreate
        - name: jdownloader-config
          hostPath:
            path: /opt/configs/jdownloader-config  # Adjust the path accordingly
            type: DirectoryOrCreate
  # restartPolicy: Always
